	 is being displayed (fixes bug #1145084).
20050326 ChangeLog,widget/{Makefile.am,error.c,menu.c,query.c,widget.[ch],
	 widget_internals.h}: add widget query confirmation dialog (patch
	 #1150708) (Darren).
20050327 z80/z80.c: page in TR-DOS ROM on NMI (enables Pentagon snapshot
	 function to work).
20050327 menu.[ch],ui/gtk/gtkui.c,widget/menu.c: check all media types for
	 changes on exit via widget UIs.
20050402 machines/specplus3.c: stop cancelled attempts to save a +3 disk
	 from silently ejecting the disk.
20050402 ui/gtk/gtkui.c: remove unused variable from menu_file_exit().
20050402 z80/{coretest.c,z80.c}: page in ROM 2 on NMI on Scorpion: enables
	 monitor to work (fixes bug #1094070) (thanks, Erik Kunze).
20050425 fuse.c,settings.pl,sound.c,tape.c,trdos.c,machines/tc2048.c,
	 ui/gtk/binary.c,z80/z80_ops.c: gcc 4.0 fixups.
20050427 event.c: don't reset tstates at the end of
	 event.c:event_force_events() (fixes bug #1163983; thanks, Jon
	 Needle).
20050427 ui/sdl/sdldisplay.c: check smallest supported fullscreen resolution,
         and if we don't have a resonable match try to find one (Fred).
20050501 widget/{.cvsignore,Makefile.am,fuse.font.sbf,mkfusefont.pl}: add
	 proportional font (part of patch #1150693) (Darren).
20050501 widget/{widget.c,widget_internals.h}: core support for
	 proportional printing (next part of patch #1150693) (Darren).
20050501 widget/{menu.c,widget.c}: remove unused variables/functions.
20050501 menu_data.pl,widget/{browse.c,debugger.c,error.c,filesel.c,
	 menu.c,options.pl,query.c,roms.c,select.c,text.c,widget.c,
	 widget_internals.h}: implement proportional printing (rest of
	 patch #1150693) (Darren).
20050501 keysyms.pl,ui/sdl/{sdlkeyboard.[ch],sdlui.c}: SDL support for
	 'native' keysyms change (patch #1152497) (Fred).
20050501 utils.[ch],widget/widget.c: find the Fuse font file when running
	 in the build tree.
20050606 input.c: also drive the joystick from the Spectrum keysym on release
	 (Fred).